--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Shared eslintrc files for AV projects",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "semantic-release": "semantic-release"
   },
   "author": "",
   "license": "ISC",
@@ -19,9 +19,42 @@
     "eslint-config-airbnb": "^19",
     "eslint-plugin-import": "^2",
     "eslint-plugin-jsx-a11y": "^6",
-    "eslint-plugin-react": "^7"
+    "eslint-plugin-react": "^7",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "semantic-release": "^21.0.1"
   },
   "peerDependencies": {
     "eslint": "^8"
+  },
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/changelog",
+    "@semantic-release/github",
+    "@semantic-release/npm",
+    "@semantic-release/git"
+  ],
+  "release": {
+    "prepare": [
+      "@semantic-release/changelog",
+      "@semantic-release/npm",
+      {
+        "path": "@semantic-release/git",
+        "assets": [
+          "package.json",
+          "package-lock.json",
+          "CHANGELOG.md"
+        ],
+        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+      }
+    ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alumni-ventures-group/eslint-config-av.git"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/@alumni-ventures-group"
   }
 }
