--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@semantic-release/git"
   ],
   "release": {
+    "branches": ["main"],
     "prepare": [
       "@semantic-release/changelog",
       "@semantic-release/npm",
