--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-config-av",
+  "name": "@alumni-ventures-group/eslint-config-av",
   "version": "0.1.1",
   "description": "Shared eslintrc files for AV projects",
   "main": "index.js",
