--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "@babel/core": "^7.21.4",
     "@babel/eslint-parser": "^7.21.3",
     "@rushstack/eslint-patch": "^1.2.0",
-    "eslint-config-airbnb": "^19",
-    "eslint-plugin-import": "^2",
-    "eslint-plugin-jsx-a11y": "^6",
-    "eslint-plugin-react": "^7",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
+    "eslint-config-airbnb": "^19",
+    "eslint-config-next": "^13.4.3",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-cypress": "^2.13.3",
+    "eslint-plugin-import": "^2",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-jsx-a11y": "^6",
+    "eslint-plugin-react": "^7",
     "semantic-release": "^21.0.1"
   },
   "peerDependencies": {
